--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "bootstrap": "^5.3.7",
-    "framer-motion": "^12.19.2",
+    "firebase": "^11.9.1",
+    "framer-motion": "^12.22.0",
+    "google-map-react": "^2.2.5",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
+    "react": "^19.0.0-rc.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.0.0-rc.1",
+    "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.6.2",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/leaflet": "^1.9.19",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
